Fixed MULE-513. Stream hides input characters
git-svn-id: https://svn.codehaus.org/mule/trunk@1161 bf997673-6b11-0410-b953-e057580c5b09