@@ -1,7 +1,8 @@
 /*
- * $Header$
- * $Revision$
- * $Date$
+ * $Header:
+ * /cvsroot/mule/mule/src/java/org/mule/providers/vm/VMMessageReceiver.java,v
+ * 1.8 2003/11/10 21:05:47 rossmason Exp $ $Revision$ $Date: 2003/11/10
+ * 21:05:47 $
  * ------------------------------------------------------------------------------------------------------
  * 
  * Copyright (c) SymphonySoft Limited. All rights reserved. http://www.symphonysoft.com
@@ -20,7 +21,6 @@ import org.mule.umo.UMOMessage;
 import org.mule.umo.endpoint.UMOEndpoint;
 import org.mule.umo.lifecycle.InitialisationException;
 import org.mule.umo.provider.UMOConnector;
-import org.mule.util.Utility;
 
 import java.io.InputStream;
 
@@ -56,7 +56,7 @@ public class StreamMessageReceiver extends PollingMessageReceiver
                 ((SystemStreamConnector)connector).setPromptMessage(promptMessage);
             }
             if(messageDelayTime!=null) {
-                ((SystemStreamConnector)connector).setMessageDelayTime(new Long(messageDelayTime).longValue());
+                ((SystemStreamConnector)connector).setMessageDelayTime(Long.valueOf(messageDelayTime).longValue());
             }
         }
     }
@@ -79,25 +79,17 @@ public class StreamMessageReceiver extends PollingMessageReceiver
     public void poll()
     {
         try {
-            // anything to read?
-            if (inputStream.available() == 0) {
-                return;
-            }
-
+            StringBuffer message = new StringBuffer();
             byte[] buf = new byte[getBufferSize()];
             int len = inputStream.read(buf);
-            if (len == -1) {
+            if (len == -1)
                 return;
-            }
+            message.append(new String(buf, 0, len));
+            //remove the trailing /n
+            String read = message.toString();
+            if(read.endsWith("\n")) read = read.substring(0, message.length()-1);
 
-            String message = new String(buf, 0, len);
-
-            //remove any trailing CR/LF
-            if (message.endsWith(Utility.CRLF)) {
-            	message = message.substring(0, message.length() - Utility.CRLF.length());
-            }
-
-            UMOMessage umoMessage = new MuleMessage(connector.getMessageAdapter(message));
+            UMOMessage umoMessage = new MuleMessage(connector.getMessageAdapter(read));
             routeMessage(umoMessage, endpoint.isSynchronous());
 
             ((StreamConnector) endpoint.getConnector()).reinitialise();
